--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="form-content">
       <div class="form-container">
-        <h6>Pin</h6>
+        <h6>Pin: 127804</h6>
         <p>Please enter your 6 digit PIN to log into the system.</p>
 
         <form class="pin-form">
